--- a/style.css
+++ b/style.css
@@ -266,72 +266,37 @@ body {
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
     0 100px 80px rgba(0, 0, 0, 0.07);
 }
-#timelineGrid {
-  display: grid;
-  grid-template-columns: 0.1fr 0.5fr 0.1fr;
-  grid-template-rows: repeat(5, 1fr);
-  grid-template-areas:
-    "img1 vl ."
-    ". vl img2"
-    "img3 vl ."
-    ". vl img4"
-    "img5 vl .";
+
+#timelineArea {
+  display: flex;
+  justify-content: center;
+}
+.oneTimeline, .twoTimeline {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 .vl {
-  grid-area: vl;
-  /* border-left: 2px solid var(--light-blue); */
-  /* height: 700px; */
-  /* position: absolute;
-  left: 50%;
-  margin-left: 0; */
-  /* top: 75%; */
-  /* stroke-width: 5;
-  stroke-dasharray: 15, 310;
-  stroke-dashoffset: 48;
-  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1); */
+  padding: 0 50px;
 }
 
 #lineSvg {
-  width: 400px;
-  height: 800px;
-  margin-left:-50px;
+  width: 1px;
+  height: 600px;
 }
 
 .tripsTimelineImg {
-  width: 200px;
+  width: auto;
+  height: 150px;
   display: block;
   margin: auto;
 }
 .tripsTimelingLoc {
   display: flex;
-  align-items: flex-end;
   justify-content: center;
+  flex: auto;
 }
-.tripsTimelineImg:nth-of-type(1n) {
-  grid-area: img1;
-  margin: 60px 0 0 50px;
-}
-.location1 {
-  grid-area: img1;
-}
-.tripsTimelineImg:nth-of-type(2n),
-.location2 {
-  grid-area: img2;
-}
-.tripsTimelineImg:nth-of-type(3n),
-.location3 {
-  grid-area: img3;
-  margin-left: 50px;
-}
-.tripsTimelineImg:nth-of-type(4n),
-.location4 {
-  grid-area: img4;
-}
-.tripsTimelineImg:nth-of-type(5n),
-.location5 {
-  grid-area: img5;
-  margin-left: 50px;
-}
+
 .readMoreTrip span {
   cursor: pointer;
   display: inline-block;
@@ -1240,7 +1205,7 @@ select:after {
 .coronaText {
   font-family: "Brandon Text Light";
   margin-top: 20px;
-  margin: 0 30px;
+  margin: 30px;
 }
 .corona-modal-close,
 .trip-modal-close,
