--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
   --dark-blue: #2a3141;
   --yellow: #ffff00;
 
+
   /* weather */
   --bg_main: #0a1f44;
   --text_light: #fff;
@@ -142,7 +143,6 @@ body {
 
 /* --------- SECTIONS -------- */
 #intro,
-#tours,
 #seasonInfo,
 #gallery,
 #faqInfo {
@@ -378,7 +378,7 @@ body {
   position: relative;
   display: inline-flex;
   font-size: var(--body-font);
-  color: var(--dark-blue);
+  color: var(-);
 }
 
 #tableGuide {
@@ -421,9 +421,14 @@ body {
 }
 
 /* --------- TOURS -------- */
+#tours {
+  margin-bottom: 350px;
+}
+
 #tourArea {
-  display: inline-flex;
-  margin: 300 0 30px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .corona-guidelines {
   margin: 30px auto;
@@ -447,19 +452,21 @@ body {
   padding: 30px 0 60px 0;
 }
 
-#singleTourArea {
+.tourTitle {
   display: flex;
-  margin: 0 40px;
   flex-direction: column;
   align-items: center;
   max-width: 350px;
   border: 1px solid var(--dark-blue);
-  border-radius: 6px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
   color: black;
   background-color: white;
   transition: transform 0.5s;
-  /* visibility: hidden; */
+  margin: 30px auto;
+    padding: 8px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    max-width: max-content;
 }
 
 #singleTourArea:hover,
@@ -473,13 +480,12 @@ body {
 }
 .tourText {
   font-family: "Brandon Text Light";
-  padding: 0 20px;
-  margin-top: 0;
+  width: 400px;
   text-align: left;
+  display: none;
+  /* position: absolute; */
 }
-#tours {
-  padding: 20px 0 90px 0;
-}
+
 .tourImg {
   width: 350px;
   border-radius: 5px 5px 0 0;
@@ -1192,7 +1198,7 @@ select:after {
   border: none;
   color: var(--dark-blue);
   padding: 50px 35px;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; /* 15% from the top and centered */
   width: 50%; /* Could be more or less, depending on screen size */
   text-align: justify;
   border-radius: 3px;
