--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@
   --dark-blue: #2a3141;
   --yellow: #ffff00;
 
-
   /* weather */
   --bg_main: #0a1f44;
   --text_light: #fff;
@@ -110,7 +109,8 @@ html {
 }
 
 /* --------- HERO SECTION -------- */
-.banner, #introText {
+.banner,
+#introText {
   width: 30%;
   height: auto;
   text-align: center;
@@ -130,7 +130,6 @@ html {
   /* filter: brightness(0.6); */
   /* box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4); */
 }
-
 
 .showVideo {
   display: block;
@@ -277,8 +276,10 @@ html {
   display: flex;
   justify-content: center;
 }
-#gallery-1 , #gallery-2, #gallery-3{
-column-count: 2;
+#gallery-1,
+#gallery-2,
+#gallery-3 {
+  column-count: 2;
 }
 
 /* .gallery-item {
@@ -446,7 +447,10 @@ column-count: 2;
   color: var(--dark-blue) !important;
   cursor: pointer;
   max-width: max-content;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.07);
 }
 
 .anchor {
@@ -465,7 +469,7 @@ column-count: 2;
   max-width: 350px;
   box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.3);
   text-transform: uppercase;
-  color:  var(--light-blue);
+  color: var(--light-blue);
   border: solid 1px var(--dark-blue);
   border-radius: 20px;
   font-family: var(--main-font);
@@ -476,7 +480,7 @@ column-count: 2;
   max-width: max-content;
 }
 
-#singleTourArea{
+#singleTourArea {
   width: 400px;
 }
 
@@ -722,7 +726,8 @@ column-count: 2;
   grid-template-rows: repeat(2, 1fr);
   grid-template-areas:
     "t1 t2 t3 t4"
-    "desc1 desc2 desc3 desc4";
+    "desc1 desc2 desc3 desc4"
+    "feature1 . . .";
   padding: 30px;
 }
 #bottomNavigation h5:first-of-type {
@@ -781,6 +786,23 @@ column-count: 2;
 .contactIcon3 {
   grid-area: desc4;
   padding-left: 100px;
+}
+
+.featuredIn {
+  width: 120px;
+  height: auto;
+  margin-top: 30px;
+}
+.times {
+  grid-area: feature1;
+  width: 150px;
+  display: flex;
+  justify-self: right;
+  align-self: flex-end;
+  margin-right: 50px;
+}
+.conde {
+  grid-area: feature1;
 }
 
 /* --------- FAQ ---------- */
@@ -1135,14 +1157,14 @@ select:after {
 }
 
 .changeMenu {
-    /* flex-direction: column; */
-    /* margin: 50px 0; */
-    /* margin: 28px 0; */
-    margin-inline-start: auto;
-    background-color: #2a3141;
-    padding: 30px;
-    width: 100%;
-    display: flex;
+  /* flex-direction: column; */
+  /* margin: 50px 0; */
+  /* margin: 28px 0; */
+  margin-inline-start: auto;
+  background-color: #2a3141;
+  padding: 30px;
+  width: 100%;
+  display: flex;
 }
 
 #cardBilling {
@@ -2188,7 +2210,6 @@ select:after {
   }
 }
 
-
 @media only screen and (max-width: 600px) {
   #tripArea {
     display: flex;
@@ -2199,7 +2220,8 @@ select:after {
   .availability {
     display: flex;
   }
-  #firstRow, #secondRow {
+  #firstRow,
+  #secondRow {
     flex-direction: column;
   }
 }
