--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ html {
   padding: 5px;
 }
 #logo {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin-right: 1250px;
 }
 #navBar {
@@ -83,10 +83,11 @@ html {
 }
 #navBar a {
   color: white;
-  cursor: pointer;
+  cursor: pointer !important;
   font-family: var(--main-font);
   text-decoration: none;
   margin: 10px 20px;
+  font-family: "Brandon Text Bold";
 }
 /* sticky navBar */
 .changeMenu {
@@ -98,7 +99,6 @@ html {
 }
 
 #navBar a:hover {
-  cursor: pointer;
   color: var(--yellow);
 }
 
@@ -110,7 +110,6 @@ html {
   border: none;
   border-radius: 20px;
   color: var(--dark-blue);
-  cursor: pointer;
   background-color: var(--yellow);
   color: var(--dark-blue) !important;
 }
@@ -252,7 +251,7 @@ html {
 .tripImg {
   width: 300px;
 }
-.tripsDeco {
+/* .tripsDeco {
   height: auto;
   width: 270px;
   position: absolute;
@@ -260,7 +259,7 @@ html {
 }
 .tripsDeco:last-of-type {
   margin-top: 170px;
-}
+} */
 .readMoreTrip {
   margin-left: auto;
   margin-top: auto;
@@ -785,6 +784,10 @@ html {
   height: auto;
   grid-area: desc4;
   margin-left: 170px;
+  cursor: pointer;
+}
+.contactLink1 {
+  cursor: pointer !important;
 }
 .contactIcon2 {
   grid-area: desc4;
