--- a/style.css
+++ b/style.css
@@ -907,6 +907,8 @@ html {
   background-color: #fff;
   border-radius: 50%;
   display: inline-block;
+  transition: transform 0.8s;
+  box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.2);
 }
 .newsletterIcon {
   height: 35px;
@@ -937,7 +939,34 @@ html {
   right: 0;
   /* height: 60%; */
   background-color: #fff;
-  transition: 0.8s;
+  animation: scale-up-center 0.9s both;
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.newsletterAnimation {
+  animation: scale-up-hor-right 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+@keyframes scale-up-hor-right {
+  0% {
+    -webkit-transform: scaleX(0.4);
+    transform: scaleX(0.4);
+    -webkit-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+  }
 }
 .showOverlay {
   /* width: 15%;
