--- a/style.css
+++ b/style.css
@@ -987,6 +987,11 @@ html {
   padding: 30px 40px;
   box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 }
+.overlay-content2 {
+  width: max-content;
+  height: auto;
+  bottom: 0;
+}
 .newsletterTitle,
 .newsletterText {
   margin: 20px 0;
