--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ html {
 
 #trips {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 80px;
 }
 .whatWeOffer {
   text-align: center;
@@ -314,11 +314,27 @@ html {
   stroke-dashoffset: 1000;
   animation: dash 5s linear alternate infinite;
 }
-
 @keyframes dash {
   from {
     stroke-dashoffset: 82;
   }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+#boatSvg {
+  left: 30%;
+  top: 115%;
+  width: 300px;
+  transform: rotate(-25deg);
+  position: absolute;
+}
+.boatAnimation {
+  stroke-dasharray: 3000;
+  stroke-dashoffset: 3000;
+  animation: draw 5s linear forwards infinite;
+}
+@keyframes draw {
   to {
     stroke-dashoffset: 0;
   }
