--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ html {
 
 .video-container {
   object-fit: cover;
-  max-height: 600px;
+  max-height: 850px;
   width: 100%;
   /* filter: contrast(80%); */
   /* filter: brightness(0.6); */
@@ -1823,7 +1823,7 @@ body.modal-active {
 
 .waves {
   width: 100%;
-  margin-top: -100px;
+  /* margin-top: -100px; */
   height: 10vh;
   margin-bottom: -7px; /*Fix for safari gap*/
   min-height: 100px;
@@ -1831,6 +1831,7 @@ body.modal-active {
 }
 #waves {
   position: relative;
+  margin-top: -100px;
 }
 
 .parallax > use {
