--- a/style.css
+++ b/style.css
@@ -323,16 +323,17 @@ html {
   }
 }
 #boatSvg {
-  left: 30%;
-  top: 115%;
-  width: 300px;
-  transform: rotate(-25deg);
+  left: 0;
+  top: 110%;
+  width: 900px;
+  /* transform: rotate(-15deg); */
   position: absolute;
 }
 .boatAnimation {
   stroke-dasharray: 3000;
   stroke-dashoffset: 3000;
   animation: draw 5s linear forwards infinite;
+  animation-delay: 1s;
 }
 @keyframes draw {
   to {
