--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ html {
 
 #trips {
   text-align: center;
-  margin-top: 80px;
+  /* margin-top: 80px; */
 }
 .whatWeOffer {
   text-align: center;
@@ -399,11 +399,9 @@ html {
   }
 }
 #boatSvg {
-  left: -10%;
-  top: 110%;
   width: 600px;
-  position: absolute;
 }
+
 #boatSvg2 {
   right: -10%;
   top: 110%;
